--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,25 @@ layout: default
 <div class="content">
     {{ content }}
 </div>
-
+{% if page.comments %}
+<h2>Comments</h2>
+<div id="disqus_thread"></div>
+<script>
+    let PAGE_URL = "{{site.url}}{{page.url}}"
+    let PAGE_IDENTIFIER = "{{page.url}}"
+    var disqus_foncig = function() {
+        this.page.url = PAGE_URL;
+        this.page.identifier = PAGE_IDENTIFIER;
+    };
+    (function() {
+        var d = document, s = d.createElement('script');
+        s.src = 'https://lens-2.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript"></a></noscript>
+{% endif %}
 {% include post/about.html %}
 
 {% include externals/disqus.html %}
