--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-
+    <link rel="icon" href="/assets/favicon.ico/favicon.ico" type="image/x-icon" sizes="16x16">
     <div class="navigation">
         <a href="/" class="logo">{{ site.title }}</a>
 
@@ -22,4 +22,5 @@
             </a>
         {% endif %}
     </ul>
+    {%- include google-analytics.html -%}
 </header>
